# raym

./: .gitignore  CMakeLists.txt  README.md
resources/shaders/: lighting_shader.fs  lighting_shader.vs  ssao_shader.fs  ssao_shader.vs  water_shader.fs  water_shader.vs
scripts/: generate_water_textures.py
src/: chunk.h  main.c  marching_cubes.c  marching_cubes.h  perlin.h  raylib.h  raymath.h  render.c  render.h  rlgl.h  terrain.c  terrain.h
